--- a/index.html
+++ b/index.html
@@ -5,20 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Restaurant Promo Banner Constructor</title>
-    <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
-    <style>
-        body {
-            font-family: 'Inter', system-ui, -apple-system, sans-serif;
-            background-color: #f5f5f7;
-            margin: 0;
-            overflow: hidden;
-        }
-        .als-sirius-fallback {
-            font-family: 'Inter', sans-serif;
-            font-weight: 900;
-        }
-    </style>
+    <link rel="stylesheet" href="/index.css">
 <script type="importmap">
 {
   "imports": {
